--- a/GMM-2/GMM part 2.ipynb
+++ b/GMM-2/GMM part 2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68196fff",
    "metadata": {},
    "source": [
     "# GMM, round 2\n",
@@ -23,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "22a68b37",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z is a scalar\n",
+      "z has len 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Trick 1: try\n",
     "# Let's say I have a function that receives an input x,\n",
@@ -55,10 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c589344e",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object of type 'int' has no len()\n"
+     ]
+    }
+   ],
    "source": [
     "try: \n",
     "    len(x)\n",
@@ -67,10 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "827ec953",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2)\n",
+      "(10, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Trick 2: Another way to plan for different types of variables\n",
     "# being passed is to do if statements. Let's say we don't know if\n",
@@ -98,7 +120,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b143be9",
    "metadata": {},
    "source": [
     "First let's look at just the instantiation, that is, the setting of attributes and what gets passed in:"
@@ -106,8 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07a652bd",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da052591",
    "metadata": {},
    "source": [
     "Now let's add in our methods, which we can conveniently inherit from the GMM module!"
@@ -168,8 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35f6014e",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +254,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b258737c",
    "metadata": {},
    "source": [
     "## Another example of a GMM application\n",
@@ -250,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee0be2b",
    "metadata": {},
    "source": [
     "### Model set-up\n",
@@ -274,8 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be5448eb",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,16 +311,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7541a1",
    "metadata": {},
    "source": [
-    "Now we want 2 data-generating processes: one where our instrument is exogenous, and one where exogeneity is violated. To do this, I define a single DGP function, which takes as a parameter the covariance between Z and e, which should be 0 in the exogenous case, and $\\neq 0$ in the case of endogeneity. "
+    "Now we want 2 data-generating processes: one where our instrument is exogenous, and one where exogeneity is violated (Z is not good in this case). To do this, I define a single DGP function, which takes as a parameter the covariance between Z and e, which should be 0 in the exogenous case, and $\\neq 0$ in the case of endogeneity. [can also do this with an ifell statement]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50e8120c",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,8 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b87b6bb2",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,8 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01b1fbd7",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,14 +372,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3eb983a3",
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.2136123 ]\n",
+      " [0.14661237]]\n"
+     ]
+    }
+   ],
    "source": [
     "# test IV estimate under exogeneity: true_beta = .1\n",
     "from numpy.linalg import pinv\n",
     "\n",
+    "# (Z'X)^(-1)Z'y\n",
     "print(pinv(data_exog[2].T@(data_exog[1]))@\n",
     "      (data_exog[2].T)@(data_exog[0]))\n",
     "\n",
@@ -378,10 +398,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52cffe3d",
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.13648424]\n",
+      " [0.50846295]]\n"
+     ]
+    }
+   ],
    "source": [
     "# test IV estimate when Z is endogenous: true_beta = .1\n",
     "print(pinv(data_endog[2].T@(data_endog[1]))@\n",
@@ -390,18 +418,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac6f9cc8",
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.68599492, -0.54029095, -0.10406316],\n",
+       "       [-0.33261393,  0.03103213, -0.40299692],\n",
+       "       [-0.3924007 ,  0.17242756, -0.16862843],\n",
+       "       ...,\n",
+       "       [ 0.17412776,  0.13687087,  0.10394433],\n",
+       "       [ 0.30429945,  0.10533122,  0.24314976],\n",
+       "       [-0.43074296,  0.25440137,  0.59423521]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's look at our moment conditions\n",
-    "gj(true_beta, data_exog)"
+    "gj(true_beta, data_exog)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "80f67ea8",
    "metadata": {},
    "source": [
     "So far we have a DGP capable of making data for which our IV moment condition is satisfied and for which it is not. Let's see how GMM performs for each."
@@ -409,45 +453,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15a8ab99",
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true beta = [0.2 0.1]\n",
+      "beta estimate for endog. DGP: [0.0462169  0.54606908]\n",
+      "beta estimate for exog. DGP: [0.19072253 0.11991024]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. instantiate\n",
     "b0 = np.array([[0,0]]).T\n",
     "\n",
+    "# to run class function, need gj, data, B\n",
     "gmm_endog = GMM(gj,data_endog,b0)\n",
     "gmm_exog = GMM(gj,data_exog,b0)\n",
+    "\n",
     "\n",
     "# 2. estimate\n",
     "print(f\"true beta = {true_beta}\")\n",
     "print(f\"beta estimate for endog. DGP: {gmm_endog.two_step_gmm()}\")\n",
-    "print(f\"beta estimate for exog. DGP: {gmm_exog.two_step_gmm()}\")"
+    "print(f\"beta estimate for exog. DGP: {gmm_exog.two_step_gmm()}\")\n",
+    "\n",
+    "# GMM is only as good as the assumption (assertion) we begin with. If assertion is very wrong, GMM will not give unbiased or accurate result.\n",
+    "# Similar to how IV is only as good as your instruments\n",
+    "# Here we know the true betas, so we can easily see how each method performs. \n",
+    "# When we don't know the true betas, we can use the J statistic "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b095451",
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Critical stat for rejecting null of J: 5.9915\n",
+      "J_stat_endog = 9.7853, J_stat_exog = 0.0011\n"
+     ]
+    }
+   ],
    "source": [
     "# Should we accept these models?\n",
-    "J_crit = limiting_J = iid.chi2(3-1).isf(0.05)\n",
+    "J_crit = limiting_J = iid.chi2(3-1).isf(0.05) # 5% rejection rate; If J is big, then GMM couldn't make this function small (failure of GMM as GMM is trying to minimize)\n",
     "\n",
-    "J_exog = gmm_exog.J(gmm_exog.b, gmm_exog.Omegahat(gmm_exog.b))\n",
+    "J_exog = gmm_exog.J(gmm_exog.b, gmm_exog.Omegahat(gmm_exog.b)) # can call methods of class using the dot method\n",
     "J_endog = gmm_endog.J(gmm_endog.b, gmm_endog.Omegahat(gmm_endog.b))\n",
     "\n",
     "\n",
     "print(f\"Critical stat for rejecting null of J: {J_crit:.4f}\")\n",
     "print(f\"J_stat_endog = {J_endog:.4f}, J_stat_exog = {J_exog:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
